update checklist and subtask